unpackaged/main/default/objects/Brand_Country_Region_State_Allocation__c/Brand_Country_Region_State_Allocation__c.object-meta.xml
<CustomObject>
    <description>PS-MC-SB-13 This object is used to add allocations on state for single barrel 2.</description>
    <label>State Level Allocation</label>
    <nameField>
        <label>State Level Allocation Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>State Level Allocations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>