unpackaged/main/default/objects/Brand_Country_Region_State_Allocation__c/fields/Is_Active__c.field-meta.xml
<CustomField>
    <fullName>Is_Active__c</fullName>
    <defaultValue>true</defaultValue>
    <description>PS-MC-SB-13 to manage if Brand Country Region state allocation is active/inactive</description>
    <label>Is Active</label>
    <type>Checkbox</type>
</CustomField>