unpackaged/main/default/objects/Brand_Country_Region_State_Allocation__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Brand_Country_Region_Allocation__c</columns>
    <columns>State__c</columns>
    <columns>Allocations_Per_Interval__c</columns>
    <columns>Remaining_Allocations__c</columns>
    <columns>Used_Allocations__c</columns>
    <columns>Is_Leaf_Node__c</columns>
    <columns>Is_Active__c</columns>
    <columns>Brand_Allocation__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>NAME</field>
        <operation>contains</operation>
        <value>KCB</value>
    </filters>
    <label>All</label>
    <language>en_US</language>
</ListView>